# quick-proj

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
